--- a/projeto-portfolio/css/global.css
+++ b/projeto-portfolio/css/global.css
@@ -21,4 +21,19 @@ h3 {
 img{
   max-width: 100%;
   display: block;
+  height: auto;
+}
+.subtitulo{
+  font-size: 8rem;
+  word-break: break-all;
+  line-height: 1;
+  text-transform: uppercase;
+  max-width: 4ch;
+}
+@media (max-width: 800px){
+  .subtitulo{
+    font-size: 3rem;
+    text-transform: capitalize;
+    max-width: initial !important;
+  }
 }
