--- a/projeto-final/css/header.css
+++ b/projeto-final/css/header.css
@@ -28,7 +28,22 @@ ul,li,a{
   padding: 16px 0px;
   font-size: 1.125rem;
   display: inline-block;
+  position: relative;
 }
+.header-menu a::after{
+  content: "";
+  display: block;
+  height: 2px;
+  width: 0%;
+  background-color: #ffffff;
+  margin-top: 4px;
+  position: absolute;
+}
+.header-menu a:hover::after{
+  width: 100%;
+  transition: 0.4s;
+}
+
 @media (max-width: 800px){
   .header-menu{
     gap: 20px;
@@ -37,6 +52,15 @@ ul,li,a{
     background: #111111;
     padding: 12px 16px;
     border-radius: 4px;
+  }
+  .header-menu a:hover{
+    background-color: #2e2e2e;
+  }
+  .header-menu a::after{
+    display: none;
+  }
+  .header-menu a:hover::after{
+   display: none;
   }
 }
 @media (max-width: 600px){
