--- a/projeto-final/css/global.css
+++ b/projeto-final/css/global.css
@@ -12,4 +12,9 @@ p {
   text-decoration: none;
   list-style: none;
   font-family: Arial, Helvetica, sans-serif;
+  color: inherit;
+}
+img{
+  max-width: 100%;
+  display: block;
 }
