--- a/projeto-final/css/header.css
+++ b/projeto-final/css/header.css
@@ -29,6 +29,8 @@ ul,li,a{
   font-size: 1.125rem;
   display: inline-block;
   position: relative;
+  font-weight: 400;
+  font-family: 'Poppins', sans-serif;
 }
 .header-menu a::after{
   content: "";
