--- a/projeto-final/css/global/header.css
+++ b/projeto-final/css/global/header.css
@@ -5,7 +5,7 @@ ul,li,a{
   list-style: none;
 }
 .header-bg{
-  background-color: #000000;
+  background-color: var(--cor-12);
 }
 .header{
   display: flex;
@@ -24,20 +24,16 @@ ul,li,a{
   gap: 40px;
 }
 .header-menu a {
-  color: #ffffff;
   padding: 16px 0px;
-  font-size: 1.125rem;
   display: inline-block;
   position: relative;
-  font-weight: 400;
-  font-family: 'Poppins', sans-serif;
 }
 .header-menu a::after{
   content: "";
   display: block;
   height: 2px;
   width: 0%;
-  background-color: #ffffff;
+  background-color: var(--p-1);
   margin-top: 4px;
   position: absolute;
 }
@@ -51,12 +47,12 @@ ul,li,a{
     gap: 20px;
   }
   .header-menu a{
-    background: #111111;
+    background: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
   .header-menu a:hover{
-    background-color: #2e2e2e;
+    background-color: var(--cor-10);
   }
   .header-menu a::after{
     display: none;
