--- a/projeto-final/css/style.css
+++ b/projeto-final/css/style.css
@@ -1,3 +1,8 @@
-@import "./global.css";
-@import "./header.css";
-@import "./introducao.css";
+@import "./global/global.css";
+@import "./utilidades/tipografia.css";
+@import "./utilidades/components.css";
+@import "./utilidades/cores.css";
+@import "./global/header.css";
+@import "./home/introducao.css";
+@import "./bicicletas/bicicletas-lista.css"
+
