add: Criado a parte de tecnologia avançada do projeto final

--- a/projeto-final/css/style.css
+++ b/projeto-final/css/style.css
@@ -4,5 +4,5 @@
 @import "./utilidades/cores.css";
 @import "./global/header.css";
 @import "./home/introducao.css";
-@import "./bicicletas/bicicletas-lista.css"
-
+@import "./bicicletas/bicicletas-lista.css";
+@import "./home/tecnologia.css";
