--- a/projeto-final/css/global/header.css
+++ b/projeto-final/css/global/header.css
@@ -1,24 +1,24 @@
-ul,li,a{
+ul,
+li,
+a {
   margin: 0px;
   padding: 0px;
   text-decoration: none;
   list-style: none;
 }
-.header-bg{
+.header-bg {
   background-color: var(--cor-12);
 }
-.header{
+.header {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: space-between;
   align-items: center;
-  box-sizing: border-box;
-  padding: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-.header-menu{
+.header-menu {
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
@@ -28,7 +28,7 @@ ul,li,a{
   display: inline-block;
   position: relative;
 }
-.header-menu a::after{
+.header-menu a::after {
   content: "";
   display: block;
   height: 2px;
@@ -37,32 +37,32 @@ ul,li,a{
   margin-top: 4px;
   position: absolute;
 }
-.header-menu a:hover::after{
+.header-menu a:hover::after {
   width: 100%;
   transition: 0.4s;
 }
 
-@media (max-width: 800px){
-  .header-menu{
+@media (max-width: 800px) {
+  .header-menu {
     gap: 20px;
   }
-  .header-menu a{
+  .header-menu a {
     background: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
-  .header-menu a:hover{
+  .header-menu a:hover {
     background-color: var(--cor-10);
   }
-  .header-menu a::after{
+  .header-menu a::after {
     display: none;
   }
-  .header-menu a:hover::after{
-   display: none;
+  .header-menu a:hover::after {
+    display: none;
   }
 }
-@media (max-width: 600px){
-  .header-menu{
+@media (max-width: 600px) {
+  .header-menu {
     gap: 12px;
   }
   .header-menu a {
