--- a/projeto-final/css/home/introducao.css
+++ b/projeto-final/css/home/introducao.css
@@ -1,48 +1,45 @@
-.introducao-bg{
+.introducao-bg {
   background-color: var(--cor-12);
   box-shadow: inset 0px -120px var(--cor-0);
 }
-.introducao{
-  box-sizing: border-box;
-  max-width: 1200px;
+.introducao {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0px 40px;
-  padding: 0px 20px;
-  margin: 0 auto;
 }
-.introducao p{
+.introducao p {
   margin-bottom: 32px;
 }
-.introducao h1{
+.introducao h1 {
   margin-bottom: 32px;
 }
-.introducao-conteudo{
+.introducao-conteudo {
   align-self: end;
   padding-bottom: 200px;
 }
-.introducao img{
+.introducao img {
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
 }
-@media(max-width: 800px){
-  .introducao-bg{
+@media (max-width: 800px) {
+  .introducao-bg {
     background-color: var(--cor-11);
     padding-top: 40px;
     box-shadow: inset 0 -60px var(--cor-0);
   }
-  .introducao{
+  .introducao {
     grid-template-columns: 1fr;
     gap: 32px;
   }
-  .introducao-conteudo{
+  .introducao-conteudo {
     padding-bottom: 0px;
   }
-  .introducao h1{
+  .introducao h1 {
     margin-bottom: 16px;
   }
-  .introducao img{
+  .introducao img {
     height: 300px;
     width: 100%;
   }
