--- a/projeto-final/css/utilidades/components.css
+++ b/projeto-final/css/utilidades/components.css
@@ -1,4 +1,11 @@
-.btn-primary{
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding: 0px 20px;
+  margin: 0 auto;
+}
+.btn-primary {
+  display: inline-block;
   padding: 16px 32px;
   background-image: var(--g-1);
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
@@ -7,15 +14,32 @@
   font-size: 1.125rem;
   line-height: 1.33;
   font-weight: 600;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
 }
-.btn-primary:hover{
+.btn-primary:hover {
   background-image: var(--g-2);
 }
-@media(max-width: 600px){
-  .btn-primary{
+@media (max-width: 600px) {
+  .btn-primary {
     padding: 12px 16px;
     font-size: 1rem;
   }
+}
+.link {
+  display: inline-block;
+  color: var(--p-1);
+  font: 500 1.5rem/1.5 "Poppins", sans-serif;
+  text-transform: uppercase;
+}
+.link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;
+}
+.link:hover {
+  color: var(--cor-0);
+  transition: 0.6s;
 }
