--- a/projeto-final/css/global/global.css
+++ b/projeto-final/css/global/global.css
@@ -6,7 +6,8 @@ h1,
 h2,
 h3,
 h4,
-p {
+p,
+blockquote {
   margin: 0px;
   padding: 0px;
   text-decoration: none;
@@ -14,10 +15,10 @@ p {
   font-family: Arial, Helvetica, sans-serif;
   color: inherit;
 }
-img{
+img {
   max-width: 100%;
   display: block;
 }
-img[src$=".jpg"]{
+img[src$=".jpg"] {
   border-radius: 4px;
 }
