--- a/projeto-final/css/utilidades/components.css
+++ b/projeto-final/css/utilidades/components.css
@@ -16,9 +16,27 @@
   font-weight: 600;
   font-family: "Poppins";
   font-style: normal;
+  max-width: max-content;
 }
 .btn-primary:hover {
   background-image: var(--g-2);
+}
+.btn-secondary {
+  display: inline-block;
+  padding: 16px 32px;
+  background-color: var(--cor-10);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  color: var(--cor-4);
+  font-size: 1.125rem;
+  line-height: 1.33;
+  font-weight: 600;
+  font-family: "Poppins";
+  font-style: normal;
+  max-width: max-content;
+}
+.btn-secondary:hover {
+  background-color: var(--cor-9);
 }
 @media (max-width: 600px) {
   .btn-primary {
