--- a/projeto-final/css/style.css
+++ b/projeto-final/css/style.css
@@ -3,6 +3,7 @@
 @import "./utilidades/components.css";
 @import "./utilidades/cores.css";
 @import "./global/header.css";
+@import "./global/footer.css";
 @import "./home/introducao.css";
 @import "./bicicletas/bicicletas-lista.css";
 @import "./home/tecnologia.css";
