--- a/projeto-final/css/utilidades/components.css
+++ b/projeto-final/css/utilidades/components.css
@@ -18,6 +18,22 @@
   font-style: normal;
   max-width: max-content;
 }
+.btn-primary.arrow{
+  display: flex;
+  align-items: center;
+}
+.btn-primary.arrow::after{
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 10px;
+  margin-left: 12px;
+  background: url("../../img/icones/seta.svg");
+  transition: transform 0.2s;
+}
+.btn-primary.arrow:hover::after{
+  transform: translateX(4px);
+}
 .btn-primary:hover {
   background-image: var(--g-2);
 }
@@ -40,6 +56,10 @@
 }
 @media (max-width: 600px) {
   .btn-primary {
+    padding: 12px 16px;
+    font-size: 1rem;
+  }
+  .btn-secondary {
     padding: 12px 16px;
     font-size: 1rem;
   }
