--- a/projeto-final/css/seguros/seguros.css
+++ b/projeto-final/css/seguros/seguros.css
@@ -8,6 +8,9 @@
   gap: 40px;
   align-items: center;
 }
+#seguros.seguros{
+  padding-top: 0px;
+}
 .seguros h2{
   grid-column: 1 / -1;
 }
@@ -16,6 +19,7 @@
   padding: 32px  32px 32px 60px;
   display: grid;
   grid-template-columns: 1fr auto;
+  border-radius: 4px;
 }
 .seguros-item h3{
   margin-bottom: 40px;
