--- a/projeto-final/css/style.css
+++ b/projeto-final/css/style.css
@@ -9,6 +9,8 @@
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
-@import "./home/seguros.css";
+@import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
 @import "./termos/termos.css";
 @import "./bicicletas/bicicletas.css";
