--- a/projeto-final/css/bicicletas/bicicletas-lista.css
+++ b/projeto-final/css/bicicletas/bicicletas-lista.css
@@ -13,6 +13,9 @@
   margin: 0 auto;
   overflow-x: auto;
 }
+#bicicleta.bicicletas-lista-items{
+  padding: 0px 0px 0px 20px;
+}
 .bicicletas-lista-items li {
   min-width: 280px;
   flex: 1;
