--- a/projeto-final/css/style.css
+++ b/projeto-final/css/style.css
@@ -14,3 +14,5 @@
 @import "./seguros/perguntas.css";
 @import "./termos/termos.css";
 @import "./bicicletas/bicicletas.css";
+@import "./bicicletas/produtos.css";
+@import "./bicicletas/bicicleta-seguro.css";
