--- a/projeto-final/css/style.css
+++ b/projeto-final/css/style.css
@@ -16,3 +16,8 @@
 @import "./bicicletas/bicicletas.css";
 @import "./bicicletas/produtos.css";
 @import "./bicicletas/bicicleta-seguro.css";
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
+@import "./utilidades/formulario.css";
+
+
