add: Ajuestes finais no projeto final

--- a/projeto-final/css/bicicletas/bicicletas.css
+++ b/projeto-final/css/bicicletas/bicicletas.css
@@ -6,6 +6,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 40px;
   padding: 60px 0px;
+  background: url("../../img/dec/top-right.svg") no-repeat top 55px right;
 }
 .bicicletas-imagem{
   display: grid;
