--- a/projeto-final/css/utilidades/components.css
+++ b/projeto-final/css/utilidades/components.css
@@ -84,7 +84,7 @@
   transition: 0.6s;
 }
 .titulo-bg{
-  background-color: var(--cor-11);
+  background: var(--cor-11) url("../../img/dec/top-right.svg") no-repeat top right 20px; 
   padding: 60px 0px;
 }
 .titulo p{
