--- a/projeto-final/css/global/header.css
+++ b/projeto-final/css/global/header.css
@@ -37,7 +37,7 @@ a {
   margin-top: 4px;
   position: absolute;
 }
-.header-menu a:hover::after {
+.header-menu a:hover::after, .header-menu a.ativo::after {
   width: 100%;
   transition: 0.4s;
 }
